# image-creation-openai-gemini

./: .env.example  .gitignore  CLAUDE.md  README.md  cases.toml  pyproject.toml
design/: prd.md  research_models_api.md
docs/superpowers/plans/: 2026-06-13-multi-case-image-comparison.md
docs/superpowers/specs/: 2026-06-13-multi-case-image-comparison-design.md
outputs/: usage.json
outputs/cat-fullbody/: usage.json
outputs/neon-cafe/: usage.json
outputs/woman-book-edit/: usage.json
src/: generate_sample.py  make_montage.py
